--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 @import url("common.css");
 @import url("layout.css");
 @import url("header.css");
+@import url("visual.css");
 @import url("footer.css");
 
 /* *는 전체 선택자 */
