--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,12 @@
 @import url("layout.css");
 @import url("header.css");
 @import url("visual.css");
+@import url("recommend.css");
+@import url("tour.css");
+@import url("ticket.css");
+@import url("live.css");
+@import url("book.css");
+@import url("event.css");
 @import url("footer.css");
 
 /* *는 전체 선택자 */
@@ -25,6 +31,11 @@ img {
   border: 0;
   vertical-align: middle;
 }
+
+button {
+  font-family: "Pretendard", sans-serif;
+}
+
 html {
   font-size: 10px;
 }
