feat : footer영역 작성 footer header영역 작성

--- a/css/common.css
+++ b/css/common.css
@@ -40,3 +40,27 @@
   transform: translate(50%, -50%);
   border-radius: 50%;
 }
+
+/* 바로가기 버튼 */
+.btnMore {
+  position: relative;
+  display: inline-block;
+  width: auto;
+  height: 5.6rem;
+  margin: 2rem auto 0;
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 5.6rem;
+  border-radius: 3.8rem;
+  padding: 0 3.9rem;
+  border: 1px solid #e5e5e5;
+  background-color: #fff;
+}
+.btnMore span::after {
+  content: "";
+  display: inline-block;
+  width: 0.7rem;
+  height: 1.1rem;
+  margin-left: 0.7rem;
+  background: url("../images/linkArrow.svg") no-repeat center;
+}
